# tiktoken_ruby

./: .gitignore  .yardopts  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  doctest_helper.rb  tiktoken_ruby.gemspec
.github/: dependabot.yml
.github/workflows/: build.yml  cross_compile.yml  tag_and_release.yml  test_build.yml
ext/tiktoken_ruby/: Cargo.toml  extconf.rb
ext/tiktoken_ruby/src/: core_bpe_wrapper.rs  lib.rs
lib/: tiktoken_ruby.rb
lib/tiktoken_ruby/: encoding.rb  version.rb
script/: release
sig/: tiktoken_ruby.rbs
spec/: gvl_safety_spec.rb  spec_helper.rb  tiktoken_ruby_spec.rb
