[package]
name = "tiktoken_ruby"
version = "0.1.0"
edition = "2021"
authors = ["IAPark <isaac.a.park@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
rb-sys = { version = "0.9.117", features = ["stable-api-compiled-fallback"] }
tiktoken-rs = { version = "0.7.0" }
